tests/NormalTests/paczka1/fuzzy1/72306684.err
Error in line 3: AvPxLDig77 S816 21,2
Error in line 4: AvPxLDig77 A288 70,1
Error in line 11: AvPxLDig77 S816 19,1
Error in line 19: Z06K A358 51,4
Error in line 24: Z06K S816 91,5
Error in line 25: eNoPjHnjzV5 S816 37,9
